fix wrong padding

--- a/src/DetailPage/responsive.css
+++ b/src/DetailPage/responsive.css
@@ -27,6 +27,11 @@
     width: 100%;
   }
 
+  .utility-container {
+    padding-left: 0;
+    margin-top: 32px;
+  }
+
   .pages {
     width: 70%;
   }
